--- a/README
+++ b/README
@@ -3,30 +3,30 @@ scrnsaverproto
 Xorg XScrnSaver protocol headers
 
 Build requirements:
-  cygwin-1.5.19-4
-  cygport-0.1.0-1
+  cygwin-1.5.20-1
+  cygport-0.2.2-1
   gawk-3.1.5-2
   make-3.80-1
-  sed-4.1.4-1
+  sed-4.1.5-1
 
 Canonical website:
   http://xorg.freedesktop.org/
 
 Canonical download:
-  http://ftp.x.org/pub/X11R7.0/src/everything/
+  http://xorg.freedesktop.org/releases/individual/proto/
 
 -------------------------------------------
 
 Build instructions:
-  unpack scrnsaverproto-1.0.2-X-src.tar.bz2
+  unpack scrnsaverproto-1.1.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./scrnsaverproto-1.0.2-X.cygport all
+  cygport ./scrnsaverproto-1.1.0-X.cygport all
 
 This will create:
-  /usr/src/scrnsaverproto-1.0.2-X-src.tar.bz2
-  /usr/src/scrnsaverproto-1.0.2-X.tar.bz2
+  /usr/src/scrnsaverproto-1.1.0-X-src.tar.bz2
+  /usr/src/scrnsaverproto-1.1.0-X.tar.bz2
 
 -------------------------------------------
 
@@ -36,13 +36,16 @@ Files included in the binary package:
   /usr/include/X11/extensions/saverproto.h
   /usr/include/X11/extensions/scrnsaver.h
   /usr/lib/pkgconfig/scrnsaverproto.pc
-  /usr/share/doc/Cygwin/scrnsaverproto-1.0.2.README
-  /usr/share/doc/scrnsaverproto-1.0.2/COPYING
-  /usr/share/doc/scrnsaverproto-1.0.2/ChangeLog
+  /usr/share/doc/Cygwin/scrnsaverproto-1.1.0.README
+  /usr/share/doc/scrnsaverproto-1.1.0/COPYING
+  /usr/share/doc/scrnsaverproto-1.1.0/ChangeLog
 
 ------------------
 
 Port Notes:
+
+----- version 1.1.0-1 -----
+X11R7.1 version bump.
 
 ----- version 1.0.2-1 -----
 Initial Cygwin release of modular X11R7.0.
