--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 scrnsaverproto
 ------------------------------------------
-X.Org XScrnSaver protocol headers
+X.Org XScrnSaver extension headers
 
 Build requirements:
-  cygwin-1.5.20-1
-  cygport-0.2.2-1
-  gawk-3.1.5-2
-  make-3.80-1
-  sed-4.1.5-1
+  cygwin-1.7.0-62
+  cygport-0.9.10-1
+  gawk-3.1.7-1
+  make-3.81-2
+  sed-4.1.5-2
 
 Canonical website:
   http://xorg.freedesktop.org/
@@ -18,31 +18,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack scrnsaverproto-1.1.0-X-src.tar.bz2
+  unpack scrnsaverproto-1.2.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./scrnsaverproto-1.1.0-X.cygport all
+  cygport ./scrnsaverproto-1.2.0-X.cygport all
 
 This will create:
-  /usr/src/scrnsaverproto-1.1.0-X-src.tar.bz2
-  /usr/src/scrnsaverproto-1.1.0-X.tar.bz2
+  /usr/src/scrnsaverproto-1.2.0-X-src.tar.bz2
+  /usr/src/scrnsaverproto-1.2.0-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
-
-  /usr/include/X11/extensions/saver.h
-  /usr/include/X11/extensions/saverproto.h
-  /usr/include/X11/extensions/scrnsaver.h
-  /usr/lib/pkgconfig/scrnsaverproto.pc
-  /usr/share/doc/Cygwin/scrnsaverproto-1.1.0.README
-  /usr/share/doc/scrnsaverproto-1.1.0/COPYING
-  /usr/share/doc/scrnsaverproto-1.1.0/ChangeLog
-
-------------------
-
 Port Notes:
+
+----- version 1.2.0-1 -----
+Version bump for X11R7.5.
 
 ----- version 1.1.0-1 -----
 X11R7.1 version bump.
